src/test/ui/type-alias-impl-trait/type-alias-impl-trait-fn-type.stderr
error[E0562]: `impl Trait` only allowed in function and inherent method return types, not in `fn` pointer return
  --> $DIR/type-alias-impl-trait-fn-type.rs:6:20
   |
LL | type Foo = fn() -> impl Send;
   |                    ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0562`.
